--- a/index.html
+++ b/index.html
@@ -111,7 +111,12 @@
   </tr>
   
   <tr>
-    <td>F</td>
+    <td>
+      <label>
+        option 1
+        <input type="checkbox" checked="checked">
+     </label>
+    </td>
     <td>
     2. I will be employed (or have a project) and working with the following during Spring 2022:
     <br>
