--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <td>
     <label>
     option 1
-    <input type="checkbox" checked="checked">
+    <input type="checkbox" id="option1" name="option1">
     </label>
     </td>
     <td>
@@ -114,7 +114,7 @@
     <td>
       <label>
         option 2
-        <input type="checkbox" checked="checked">
+        <input type="checkbox" id="option2" name="option2">
      </label>
     </td>
     <td>
