--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 
 <head>
-  <link rel="stylesheet" src="4900sql/style.css">
+  <link type="text/css" rel="stylesheet" href="style.css">
 </head>
 
 
