--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     particularly interesting; work/internship experience; a particular technology or programming language; an application
     of computer science that interests you.
     <li>
-    <textarea style="width: 70%;" id="msg" name="user_message"></textarea>
+    <textarea style="width: 70%; height=10em" id="msg" name="user_message"></textarea>
     </li>
     <br>
     </td>
